<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="toast_connected_to_bt">Connected to</string>
    <string name="welcome_to_fire_base_login_screen">Welcome to Fire Base Login screen</string>
    <string name="password">Password: </string>
    <string name="e_mail">E-Mail: </string>
    <string name="sing_in">Sing In</string>
    <string name="create_account">Create Account</string>
    <string name="authentication_failed">Authentication failed!</string>
    <string name="connection_status">Connection:</string>
    <string name="account">Account:</string>
    <string name="verify_e_mail">Verify E-Mail</string>
    <string name="sing_out">Sing_Out</string>
    <string name="firebase_storage">FireBase Storage</string>
    <string name="connected_successfully">Connected Successfully</string>
    <string name="toast_authentication_failed">Authentication failed!</string>
    <string name="toast_email_verification">Verification email sent to</string>
    <string name="toast_verification_failed">Failed to send verification email.</string>
    <string name="toast_provide_data">Please provide data to fields</string>
    <string name="toast_no_email_address">Enter email address!</string>
    <string name="toast_enter_password">Enter password!</string>
    <string name="toast_password_too_short">Password too short, enter minimum 6 characters!</string>
    <string name="text_view_signed_out">Signed Out</string>
    <string name="bt_image_sending_prepare">Prepare Image for uploading..</string>
    <string name="toast_bt_image_sending">Images sending</string>
    <string name="toast_bt_enabled">enable Bluetooth</string>
    <string name="toast_bt_disable">disable Bluetooth</string>
    <string name="toast_bt_starting_connection">Starting Bluetooth connection with..</string>
    <string name="toast_bt_discovery">Discover enabled for 300 sec.</string>
    <string name="bt_connected_to">Connected to:</string>
    <string name="bt_connecting_state">Connecting</string>
    <string name="choose_file">Choose File</string>
    <string name="post_message">Post</string>
    <string name="stream">Stream</string>
    <string name="selected_image">selected image</string>
    <string name="file_name">File name:</string>
    <string name="image_server_connected">Connected</string>
    <string name="pick_image">Pick Image</string>
    <string name="post_message_text">post your message here</string>
    <string name="message_post">Message post</string>
    <string name="file_not_selected">No File</string>
    <string name="upload_api">Upload</string>
    <string name="api_upload_file_option">Upload file option</string>
    <string name="api_upload_byte_option">Upload byte option</string>
    <string name="api_upload_stream_option">Upload stream option</string>
    <string name="byte_option_selected">Byte uploading selected</string>
    <string name="stream_option_selected">Stream uploading selected</string>
    <string name="file_option_selected">File uploading selected</string>
    <string name="empty_text">Message is empty</string>
</resources>