<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.root.grayson.BluetoothActivityFragment">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@id/welcome_text"
            android:layout_margin="@dimen/main_margin"
            android:background="@drawable/custom_layout_shape"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/text_padding"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">

            <TextView
                android:id="@+id/user_email_text"
                style="@style/TextAppearance.AppCompat.Medium.Inverse"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/e_mail"
                android:textAlignment="gravity" />

            <EditText
                android:id="@+id/email_address_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="true"
                android:gravity="start|center_vertical"
                android:inputType="textEmailAddress"
                android:textAlignment="gravity"
                tools:ignore="LabelFor"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@id/email_layout"
            android:layout_margin="@dimen/main_margin"
            android:layout_marginStart="8dp"
            android:background="@drawable/custom_layout_shape"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/text_padding"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <TextView
                android:id="@+id/user_password_text"
                style="@style/TextAppearance.AppCompat.Medium.Inverse"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/password"
                android:textAlignment="gravity" />

            <EditText
                android:id="@+id/email_password_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="true"
                android:gravity="start|center_vertical"
                android:inputType="textPassword"
                tools:ignore="LabelFor"
                tools:targetApi="o" />
        </LinearLayout>

        <TextView
            android:id="@+id/welcome_text"
            style="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/welcome_to_fire_base_login_screen"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sing_in_button"
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/main_margin"
            android:background="@color/Buttons"
            android:text="@string/sing_in"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <TextView
            android:id="@+id/connect_text"
            style="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:layout_width="391dp"
            android:layout_height="123dp"
            android:gravity="center"
            android:text="@string/connected_successfully"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/state_text"
            style="@style/TextAppearance.AppCompat.Small.Inverse"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="end|center_vertical"
            android:text="@string/connection_status"
            android:textAlignment="gravity"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <TextView
            android:id="@+id/status_text"
            style="@style/TextAppearance.AppCompat.Small.Inverse"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start|center_vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />


        <TextView
            android:id="@+id/detail"
            style="@style/TextAppearance.AppCompat.Small.Inverse"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="end|center_vertical"
            android:text="@string/account"
            android:textAlignment="gravity"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline9" />

        <TextView
            android:id="@+id/detail_text"
            style="@style/TextAppearance.AppCompat.Small.Inverse"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start|center_vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline9" />

        <Button
            android:id="@+id/create_account"
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="12sp"
            android:layout_margin="@dimen/main_margin"
            android:background="@color/Buttons"
            android:padding="@dimen/text_padding"
            android:text="@string/create_account"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sing_out"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline8" />

        <Button
            android:id="@+id/sing_out"
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignBaseline="@id/verify_account"
            android:layout_margin="@dimen/main_margin"
            android:layout_toStartOf="@id/verify_account"
            android:background="@color/Buttons"
            android:padding="@dimen/text_padding"
            android:text="@string/sing_out"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/verify_account"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/create_account"
            app:layout_constraintTop_toTopOf="@+id/guideline8" />

        <Button
            android:id="@+id/verify_account"
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/main_margin"
            android:layout_toEndOf="@id/create_account"
            android:background="@color/Buttons"
            android:padding="@dimen/text_padding"
            android:text="@string/verify_e_mail"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sing_out"
            app:layout_constraintTop_toTopOf="@+id/guideline8" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.14" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.28" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.42" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.56" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.69" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.79" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.89" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
